Fix default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <body>
-    
-  </body>
-</html>
+
+<body>
+  <div class="page {{ page.class }}">
+  {{ content }}
