--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<head>
+  <link href='/style.css' rel='stylesheet' type='text/css' />
+  <title>{{ page.title }}</title>
+</head>
+
 <body>
   <div class="page {{ page.class }}">
   {{ content }}
