--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,14 @@
 <html lang="en-us">
 
 <head>
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans:200,400,400i" rel="stylesheet">
   <link href='/style.css' rel='stylesheet' type='text/css' />
-  <title>{{ page.title }}</title>
+
+  <meta name="theme-color" content="hsl(215, 50%, 55%)">
+
+  <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
+  <title>{{ page.title }} Octavi Pascual</title>
 </head>
 
 <body>
