Improve style.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
   <meta name="theme-color" content="hsl(215, 50%, 55%)">
 
-  <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
+  <link rel='icon' href='/favicon.ico' type='image/x-icon' />
   <title>{{ page.title }} Octavi Pascual</title>
 </head>
 
