Try to fix favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans:200,400,400i" rel="stylesheet">
-  <link href='/style.css' rel='stylesheet' type='text/css' />
+  <link href="/style.css" rel="stylesheet" type="text/css" />
 
   <meta name="theme-color" content="hsl(215, 50%, 55%)">
 
-  <link rel='icon' href='/favicon.ico' type='image/x-icon' />
+  <link rel="icon" href="/favicon.png" type="image/png" sizes="16x16" />
   <title>{{ page.title }} Octavi Pascual</title>
 </head>
 
