--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans:200,400,400i" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="/style.css" rel="stylesheet" type="text/css" />
 
   <meta name="theme-color" content="hsl(215, 50%, 55%)">
